@@ -36,9 +36,12 @@
 * Bugs fixed:
 
   [#12333] Standard requires libstdc to define vprintf and vscanf
+  [#12495] about Busy-wait delay loops(document)
   [#12775] Possible Bug in sscanf on string end
-  [#14262] avr-libc documentation error about .init sections
+  [#14224] _delay_ms() not inlining if called more than once in a unit
   [#14241] 'eeprom_is_ready' is not compiled with ATmega48
+  [#14262] avr-libc documentation error about .init sections
+  [#14433] Improve documentation of <avr/delay.h>
 
 * Other changes:
 
